[package]
name = "kittywalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
clap = { version = "4.1.1", features = ["derive"] }
hidapi = {version = "2.1.1", features = ["linux-static-libusb"], default-features = false}
# rusb = "0.9"
